Set up basic style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Website dedicated to the Street Fighter 6 Spanish League" />
+    <meta name="keywords" content="street fighter 6, spanish, league, EVO, stargg, esport, EWC, saudi arabia, riyadh, capcom, japan, buff ED" />
 
-		<title>Title in the tab</title>
-
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		
-
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
+    <title>La Arena &ndash; Street Figher 6 Spanish League</title>
+    <!-- external CSS link -->
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Bienvenidos a la Arena</h1>
+    </header>
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
